[package]
name = "macro-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
log4rs = "1.3.0"
toml = "0.8.12"
winit = "0.29.15"
anyhow = "1.0.83"
async-process = "2.2.2"
global-hotkey = "0.5.3"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
winapi = "0.3.9"
notify = "6.1.1"
crossbeam-channel = "0.5.12"
sysinfo = "0.30.12"
